[iOS] Support swipe to delete gesture for Reading List table view.

Bug: 861944
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I94b5233b12dab4809b7901d084c0aa76e02e4f35
Reviewed-on: https://chromium-review.googlesource.com/1130465
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573870}
Former-commit-id: 281b3a537c1aad4fc38d4e8e782cbe2c32a6ae37